<resources>
    <string name="app_name">Woman calendar</string>
    <string name="title_home">Home</string>
    <string name="title_articles">Articles</string>
    <string name="month">Month</string>
    <string name="period_in">Period in</string>
    <string name="log_period">Log period</string>
    <string name="my_daily_insights">My daily insights</string>
    <string name="log_your_symptoms">Log your symptoms</string>
    <string name="my_cycle">My cycle</string>
    <string name="current_cycle_nn_days">Current cycle: %s days</string>
    <string name="nn_days">%s days</string>
    <string name="nn_day">%s day</string>
    <string name="month_dd_month_dd">%s %s - %s %s</string>
    <string name="started_month_dd_yyyy">Started %s %s, %s</string>
    <string name="log_previous_cycles">Log previous cycles</string>
    <string name="there_are_no_data_to_analyze_and_compare_yet">There are no data to analyze and compare yet</string>
    <string name="log_at_least_2_periods_to_get_personalized_insights_about_your_previous_cycle_and_period_length">Log at least 2 periods to get personalized insights about your previous cycle and period length</string>
    <string name="log_at_least_3_periods_to_get_insights_about_your_cycle_regularity">Log at least 3 periods to get insights about your cycle regularity</string>
    <string name="log_previous_cycle">Log previous cycle</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dates_are_auto_filled_tap_them_to_adjust">Dates are auto-filled. Tap them to adjust.</string>
    <string name="you_can_log_previous_periods_here">You can log previous periods here</string>
    <string name="contin">Continue</string>
    <string name="period">Period</string>
    <string name="ovulation_in">Ovulation in</string>
    <string name="edit_period_dates">Edit period dates</string>
    <string name="period_may_start_today">Period may start today</string>
    <string name="current_cycle">Current cycle</string>
    <string name="dd_month">%s %s</string>
    <string name="weight">Weight</string>
    <string name="edit">edit</string>
    <string name="water">Water</string>
    <string name="sex_and_sex_drive">Sex and sex drive</string>
    <string name="mood">Mood</string>
    <string name="symptoms">Symptoms</string>
    <string name="vaginal_discharge">Vaginal Discharge</string>
    <string name="other">Other</string>
    <string name="notes">Notes</string>
    <string name="cycle_day_s">Cycle day %s</string>
    <string name="calm">Calm</string>
    <string name="menstrual_flow">Menstrual flow</string>
    <string name="consumed_this_day">Consumed this day</string>
    <string name="volume_of_water">%.2f / %.2f L</string>
    <string name="water_l">%.2f L</string>
    <string name="logged_weight">Logged Weight</string>
    <string name="apply">Apply</string>
    <string name="s_kg">%s kg</string>
    <string name="s_lb">%s lb</string>
    <string name="kg">kg</string>
    <string name="__kg">-- kg</string>
    <string name="lb">lb</string>
    <string name="__lb">-- lb</string>
    <string name="__l">-- L</string>
    <string name="discover">Discover</string>
    <string name="reproductive_health">Reproductive Health</string>
    <string name="sex">Sex</string>
    <string name="your_cycle_phase_luteal">Your Cycle Phase: Luteal</string>
    <string name="the_latest">The Latest</string>
    <string name="lgbtq">LGBTQ+</string>
    <string name="tips_for_a_pain_free_cycle">Tips for a Pain-Free Cycle</string>
    <string name="nutrition_and_fitness">Nutrition and Fitness</string>
    <string name="early_sights_of_pregnancy_content">Waiting for your period and puzzled if what you\'re feeling is pregnancy signs or just PMS? Not sure how and when to do a pregnancy test? Wondering if your birth control has you covered or you need a backup plan? Freaking out about getting pregnant so much you\'d rather avoid sex at all? Read on to get the answers!</string>
    <string name="text">Text</string>
    <string name="text_long"><![CDATA[<p>Waiting for your<p><br/>

    <h5>period and puzzled</h5><br>
     if what you\'re feeling is pregnancy<br/> signs or just PMS? Not sure how and when to do a pregnancy test? Wondering if your birth control has you covered or you need a backup plan? Freaking out about getting pregnant so much you\'d rather avoid sex at all? Read on to get the answers!]]></string>
    <string name="test_bold"><![CDATA[
    Waiting for your <b>period and puzzled</b> if what you\'re feeling is pregnancy signs or just PMS? Not sure how and when to do a pregnancy test? Wondering if your birth control has you covered or you need a backup plan? Freaking out about getting pregnant so much you\'d rather avoid sex at all? Read on to get the answers!
  ]]></string>
    <string name="next">Next</string>
    <string name="today_is_n_your_cycle_day_s">Today is\n Your Cycle Day %s</string>
    <string name="the_prediction_is_based_on_the_last_period_n_you_logged">The prediction is based on the last period\n you logged</string>
    <string name="month_dd_cycle_day_nn">%s %d, Cycle day %s</string>
    <string name="hormones_and_body_today">Hormones and body today</string>
    <string name="in_the_latter_part_of_your_period">In the latter part of your period, progesterone is low but estrogen starts rising, which may give energy levels a boost</string>
    <string name="today_s_wins">Today’s wins</string>
    <string name="today_s_challenges">Today’s challenges</string>
    <string name="hormones_and_body_post_period">You may experience a surge in estrogen-based energy and productivity, though there is a risk of overdoing things</string>
    <string name="hormones_and_body_period_start">Your progesterone and estrogen levels are low but stable - though you may lack energy, your mood should feel steady</string>
    <string name="hormones_and_body_period_mid">After ovulation, estrogen falls and progesterone rises, so you may feel calmer, but lacking energy</string>
    <string name="hormones_and_body_period_end">In the latter part of your period, progesterone is low but estrogen starts rising, which may give energy levels a boost</string>
    <string name="hormones_and_body_pre_period_start">After ovulation, estrogen falls and progesterone rises, so you may feel calmer, but lacking energy</string>
    <string name="hormones_and_body_pre_period_mid">After ovulation, estrogen falls and progesterone rises, so you may feel calmer, but lacking energy</string>
    <string name="hormones_and_body_pre_period_end">After ovulation, estrogen falls and progesterone rises, so you may feel calmer, but lacking energy</string>
    <string name="hormones_and_body_post_fertile_start">With estrogen and progesterone up, your sense of direction and coordination are up in the luteal phase, but you may experience oilyskin</string>
    <string name="hormones_and_body_post_fertile_mid">With estrogen and progesterone up, your sense of direction and coordination are up in the luteal phase, but you may experience oilyskin</string>
    <string name="hormones_and_body_post_fertile_end">At the end of the luteal phase, with rising estrogen and progesterone, you may have all the feels, but stress can be a big one Today</string>
    <string name="hormones_and_body_fertile_start">With estrogen and progesterone up, your sense of direction and coordination are up in the luteal phase, but you may experience oilyskin</string>
    <string name="hormones_and_body_ovulation_day">With estrogen and progesterone up, your sense of direction and coordination are up in the luteal phase, but you may experience oilyskin</string>
    <string name="hormones_and_body_fertile_mid">With estrogen and progesterone up, your sense of direction and coordination are up in the luteal phase, but you may experience oilyskin</string>
    <string name="hormones_and_body_fertile_end">With estrogen and progesterone up, your sense of direction and coordination are up in the luteal phase, but you may experience oilyskin</string>
    <string name="greater_stamina">Greater stamina</string>
    <string name="greater_stamina_content">As estrogen rises, your body may shift from finite glycogen (carbohydrates) to fat as an
energy source - now\'s the time to wow your family or friends with a dinner or cocktail party</string>
    <string name="increased_productivity">Increased productivity</string>
    <string name="increased_productivity_content">Rising levels of estrogen may improve working memory - used during reasoning, learning, and comprehension-based activities.
This is a good day for learning a couple of new words</string>
    <string name="overdoing_things">Overdoing things</string>
    <string name="overdoing_things_content">Though you may be enjoying increased energy and reward-based motivation due to
rising estrogen levels, try to pace yourself. Take a time-out with a mind-clearing walk outdoors</string>
    <string name="sensitive_hearing">Sensitive hearing</string>
    <string name="sensitive_hearing_content">Estrogen is linked with hearing, and rising levels at this time may cause increased audio sensitivity. Be mindful if you\'re going to loud
places like concerts or nightclubs</string>
    <string name="painful_menstrual_cramps">Painful menstrual cramps</string>
    <string name="pms_symptoms">PMS symptoms</string>
    <string name="unusual_discharge">Unusual discharge</string>
    <string name="heavy_menstrual_flow">Heavy menstrual flow</string>
    <string name="mood_swings">Mood swings</string>
    <string name="no_nothing_bothers_me">No, nothing bothers me</string>
    <string name="is_there_anything_you_want_to_improve_about_your_sleep">Is there anything you want to improve about your sleep?</string>
    <string name="no_i_sleep_well">No, I sleep well</string>
    <string name="difficulty_falling_asleep">Difficulty falling asleep</string>
    <string name="waking_up_tired">Waking up tired</string>
    <string name="waking_up_during_the_night">Waking up during the night</string>
    <string name="lack_of_sleep_schedule">Lack of sleep schedule</string>
    <string name="insomnia">Insomnia</string>
    <string name="what_would_you_like_to_change_about_your_sex_life">What would you like to change about your sex life?</string>
    <string name="nothing_i_m_totally_satisfied">Nothing, I’m totally satisfied</string>
    <string name="i_m_not_sexually_active_now">I’m not sexually active now</string>
    <string name="painful_sex">Painful sex</string>
    <string name="difficulty_with_orgasm">Difficulty with orgasm</string>
    <string name="low_libido">Low libido</string>
    <string name="communication">Communication</string>
    <string name="poor_body_image">Poor body image</string>
    <string name="none">None</string>
    <string name="lose_weight">Lose weight</string>
    <string name="gain_weight">Gain weight</string>
    <string name="maintain_healthy_weight">Maintain healthy weight</string>
    <string name="start_exercising">Start exercising</string>
    <string name="learn_about_nutrition">Learn about nutrition</string>
    <string name="get_more_energy">Get more energy</string>
    <string name="what_is_your_fitness_goal">What is your fitness goal?</string>
    <string name="is_there_anything_you_want_to_change_about_your_skin">Is there anything you want to change about your skin?</string>
    <string name="none_i_have_perfect_skin">None, I have perfect skin</string>
    <string name="lacne_and_blemishes">LAcne and blemishes</string>
    <string name="dark_spots_and_pores">Dark spots and pores</string>
    <string name="dryness">Dryness</string>
    <string name="fine_lines_and_wrinkles">Fine lines and wrinkles</string>
    <string name="dullness_and_texure">Dullness and texture</string>
    <string name="do_you_experience_discomfort_due_to_any_of_the_following">Do you experience discomfort due to any of the following?</string>
</resources>