<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_print_bold"
                android:gravity="center"
                android:text="@string/is_there_anything_you_want_to_change_about_your_skin"
                android:textColor="@color/text_color"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                android:layoutDirection="rtl"
                app:layout_constraintTop_toBottomOf="@id/title_tv">


                <RadioButton
                    android:id="@+id/none_i_have_perfect_skin_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_marginVertical="4dp"
                    android:text="@string/none_i_have_perfect_skin" />

                <RadioButton
                    android:id="@+id/lacne_and_blemishes_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_marginVertical="4dp"
                    android:text="@string/lacne_and_blemishes" />

                <RadioButton
                    android:id="@+id/dark_spots_and_pores_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_marginVertical="4dp"
                    android:text="@string/dark_spots_and_pores" />

                <RadioButton
                    android:id="@+id/dryness_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_marginVertical="4dp"
                    android:text="@string/dryness" />

                <RadioButton
                    android:id="@+id/fine_lines_and_wrinkles_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_marginVertical="4dp"
                    android:text="@string/fine_lines_and_wrinkles" />

                <RadioButton
                    android:id="@+id/dullness_and_texure_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_marginVertical="4dp"
                    android:text="@string/dullness_and_texure" />

                <RadioButton
                    android:id="@+id/other_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_marginVertical="4dp"
                    android:text="@string/other" />

            </RadioGroup>

            <Button
                android:id="@+id/next_btn"
                style="@style/GlobalButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingVertical="@dimen/btn_padding_vertical"
                android:text="@string/next"
                app:layout_constraintTop_toBottomOf="@id/radio_group" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>