<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_print_bold"
                android:gravity="center"
                android:text="@string/do_you_experience_discomfort_due_to_any_of_the_following"
                android:textColor="@color/text_color"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                android:layoutDirection="rtl"
                app:layout_constraintTop_toBottomOf="@id/title_tv">

                <RadioButton
                    android:id="@+id/painful_menstrual_cramps_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/painful_menstrual_cramps" />

                <RadioButton
                    android:id="@+id/pms_symptoms_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/pms_symptoms" />

                <RadioButton
                    android:id="@+id/unusual_discharge_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/unusual_discharge" />

                <RadioButton
                    android:id="@+id/heavy_menstrual_flow_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_marginVertical="4dp"
                    android:text="@string/heavy_menstrual_flow" />

                <RadioButton
                    android:id="@+id/mood_swings_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/mood_swings" />

                <RadioButton
                    android:id="@+id/other_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/other" />

                <RadioButton
                    android:id="@+id/nothing_bothers_me_rb"
                    style="@style/OnBoardingRadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/no_nothing_bothers_me" />
            </RadioGroup>

            <Button
                android:id="@+id/next_btn"
                style="@style/GlobalButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingVertical="@dimen/btn_padding_vertical"
                android:text="@string/next"
                app:layout_constraintTop_toBottomOf="@id/radio_group" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>